<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/DrinkSearchMainLayout"
	android:layout_width="match_parent"
	android:layout_height="fill_parent"
	android:onClick="searchDrinks"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/drinkSearchTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/search_page_title"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<ScrollView
		android:id="@+id/drinkSearchFormEntryScrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TableRow
				android:id="@+id/tableRow1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/drinkNameLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/drink_name_search"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/drinkNameSearchEntry"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/drink_name_search_hint"
					android:inputType="text" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >

				<TextView
					android:id="@+id/drinkDescriptionLabel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/drink_description_search"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/drinkDescriptionSearchEntry"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:ems="10"
					android:hint="@string/drink_description_search_hint"
					android:inputType="text" />
			</TableRow>

			<TableRow
				android:id="@+id/tableRow3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >
			</TableRow>

			<TableRow
				android:id="@+id/tableRow4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" >
			</TableRow>
		</TableLayout>
	</ScrollView>

	<Button
		android:id="@+id/drinkSearchButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="searchDrinks"
		android:text="@string/search_drinks_button_text" />

</LinearLayout>